--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.moja_budowa">
+    package="com.marcinplinta.moja_budowa">
    <application
         android:label="moja_budowa"
         android:name="${applicationName}"
