--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = moja_budowa
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.mojaBudowa
+PRODUCT_BUNDLE_IDENTIFIER = com.marcinplinta.mojaBudowa
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.marcinplinta. All rights reserved.
