--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   firebase_core: ^2.3.0
+  firebase_auth: ^4.1.5
 
 dev_dependencies:
   flutter_test:
