--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,13 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
   device_preview: ^1.1.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -51,7 +54,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+   android: "launcher_icon"
+   ios: true
+   image_path: "assets/icon/icon.jpg"    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
