--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.1.5
   device_preview: ^1.1.0
   cloud_firestore: ^4.3.1
+  flutter_bloc: ^8.1.1
   
 
 dev_dependencies:
