--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   device_preview: ^1.1.0
   cloud_firestore: ^4.3.1
   flutter_bloc: ^8.1.1
+  intl: ^0.17.0
   
 
 dev_dependencies:
