--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-
+# Firebase Google Services
+/ios/Runner/GoogleService-Info.plist
+/android/app/google-services.json
+/ios/firebase_app_id_file.json
 
 
 # Miscellaneous
