--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.17.0
   bloc: ^8.1.1
   dio: ^5.0.0
+  json_annotation: ^4.8.0
   
 
 dev_dependencies:
@@ -60,6 +61,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.11.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 flutter_icons:
    android: "launcher_icon"
