--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   bloc: ^8.1.1
   dio: ^5.0.0
   json_annotation: ^4.8.0
+  freezed_annotation: ^2.2.0
   
 
 dev_dependencies:
@@ -63,6 +64,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
+  freezed: ^2.3.2
 
 flutter_icons:
    android: "launcher_icon"
