--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dio: ^5.0.0
   json_annotation: ^4.8.0
   freezed_annotation: ^2.2.0
+  retrofit: ^4.0.1
   
 
 dev_dependencies:
@@ -65,6 +66,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
   freezed: ^2.3.2
+  retrofit_generator: ^5.0.0
 
 flutter_icons:
    android: "launcher_icon"
