--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   json_annotation: ^4.8.0
   freezed_annotation: ^2.2.0
   retrofit: ^4.0.1
+  get_it: ^7.2.0
   
 
 dev_dependencies:
