--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   retrofit: ^4.0.1
   get_it: ^7.2.0
+  injectable: ^2.1.0
+  meta: ^1.8.0
   
 
 dev_dependencies:
@@ -68,6 +70,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   freezed: ^2.3.2
   retrofit_generator: ^5.0.0
+  injectable_generator: ^2.1.4
 
 flutter_icons:
    android: "launcher_icon"
