--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_fonts: ^3.0.1
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
-  device_preview: ^1.1.0
+  
   cloud_firestore: ^4.3.1
   flutter_bloc: ^8.1.1
   intl: ^0.17.0
@@ -71,6 +71,9 @@ dev_dependencies:
   freezed: ^2.3.2
   retrofit_generator: ^5.0.0
   injectable_generator: ^2.1.4
+  mocktail: ^0.3.0
+  test: ^1.23.1
+  bloc_test: ^9.1.1
 
 flutter_icons:
    android: "launcher_icon"
