--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   meta: ^1.8.0
   image_picker: ^0.8.7
   firebase_storage: ^11.0.16
+  new_gradient_app_bar: ^0.2.0
+  path: ^1.8.2
   
 
 dev_dependencies:
